complete feature/BMI-calculator

--- a/Color_Changer/index.html
+++ b/Color_Changer/index.html
@@ -11,8 +11,8 @@
   <body>
     <nav>
       <a href="/" aria-current="page">Home</a>
-      <a target="_blank" href="https://www.youtube.com/@chaiaurcode"
-        >Youtube channel</a
+      <a target="_blank" href="https://www.linkedin.com/in/abhay-lawande-2b630326b/"
+        >Abhay Lawande</a
       >
     </nav>
     <div class="canvas">
