--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a class="project-link" href="./BMI_Calculator/index.html"
           >Project 2 - BMI Generator ☕️</a
         >
-        <a class="project-link" href="./3-DigitalClock/index.html"
+        <a class="project-link" href="./Digital_Clock/index.html"
           >Project 3 - Digital clock 😎</a
         >
         <a class="project-link" href="./4-GuessTheNumber/index.html"
